Fix menu loading by using relative API paths

--- a/templates/billing.html
+++ b/templates/billing.html
@@ -151,7 +151,7 @@
 </div>
 
 <script>
-const API = "https://thirupugazh-pos.onrender.com";
+const API = "";
 let cartId = null;
 
 /* ROLE CHECK */
